# actix-vs-fiber

./: README.md  bench.lua
actix/: .env  .env.example  Cargo.toml
actix/src/: db.rs  handlers.rs  main.rs  models.rs
fiber/: .env.example  db.go  go.mod  go.sum  handlers.go  main.go
net/http/: go.mod  handlers.go  main.go  models.go
requests/json/: heavy.json  huge_json.json  light.json
vms/client-vm/: setup_client_kernel.sh
vms/db-vm/: setup_benchmark_db.sh  setup_database.sql
vms/db-vm/init/: cleanup_postgres.sh  postgresql_minimal.conf  postgresql_tuned.conf  setup_db_kernel.sh  setup_postgres.sh
vms/server-vm/: setup_server_kernel.sh
